--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Quick Accounting</title>
     <script type="module" crossorigin src="./assets/index.bd2e661c.js"></script>
     <link rel="stylesheet" href="./assets/index.fc06bfe5.css">
   </head>
