deploy: 367f462883e72f2b2ce6782462d5b2d03cb28e3c

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="./assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quick Accounting</title>
     <script type="module" crossorigin src="./assets/index.bd2e661c.js"></script>
